# dicom2npy

./: .gitignore  README.md  pyproject.toml  run_viewer.py
dicom2npy/utils/: __init__.py  loader.py  processor.py  visualizer.py
dicom2npy/viewer/: __init__.py  image_viewer.py
